# gnome-tour

./: .gitignore  .gitlab-ci.yml  Cargo.toml  NEWS  README.md  gnome-tour.doap  meson.build  meson_options.txt
build-aux/: cargo.py  cargo.sh  dist-vendor.sh  org.gnome.TourDevel.json
data/: meson.build  org.gnome.Tour.desktop.in.in  org.gnome.Tour.metainfo.xml.in.in  org.gnome.Tour.service.in  resources.gresource.xml
data/resources/: style-dark.css  style.css
data/resources/ui/: image-page.ui  paginator.ui  window.ui
po/: LINGUAS  POTFILES.in  ab.po  ar.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  meson.build  ml.po  nb.po  (+24 more)
src/: application.rs  config.rs.in  main.rs  meson.build  utils.rs
src/widgets/: image_page.rs  mod.rs  paginator.rs  window.rs
src/widgets/pages/: image.rs  mod.rs  welcome.rs  welcome_video.rs
