[package]
name = "gnome-tour"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.10", features = ["gnome_47"] }
log = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
adw = { package = "libadwaita", version = "0.8" }
env_logger = "0.11"
regex = "1.10"
