[package]
name = "gnome-tour"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2024"

[dependencies]
gtk = { package = "gtk4", version = "0.11.0-alpha.3", features = ["v4_4"] }
glib = { version = "0.22.0", features = ["v2_68"] }
log = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
adw = { package = "libadwaita", version = "0.9.0" }
env_logger = "0.11"
regex = "1.10"
